--- a/api/produkt-biete/models/produkt-biete.settings.json
+++ b/api/produkt-biete/models/produkt-biete.settings.json
@@ -17,9 +17,7 @@
       "collection": "file",
       "via": "related",
       "allowedTypes": [
-        "files",
-        "images",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
       "required": true
