--- a/api/home/models/home.settings.json
+++ b/api/home/models/home.settings.json
@@ -13,18 +13,6 @@
       "type": "text",
       "required": true
     },
-    "Spielertext": {
-      "type": "text"
-    },
-    "Trainertext": {
-      "type": "text"
-    },
-    "Schiedsrichtertext": {
-      "type": "text"
-    },
-    "Sponsorentext": {
-      "type": "text"
-    },
     "NewsAnzeige": {
       "type": "boolean",
       "default": true,
@@ -35,6 +23,19 @@
       "min": 2,
       "max": 20,
       "type": "integer"
+    },
+    "Spielertext": {
+      "type": "richtext",
+      "required": false
+    },
+    "Trainertext": {
+      "type": "richtext"
+    },
+    "Schiedsrichtertext": {
+      "type": "richtext"
+    },
+    "Sponsorentext": {
+      "type": "richtext"
     }
   }
 }
