added team index

--- a/api/team/models/team.settings.json
+++ b/api/team/models/team.settings.json
@@ -37,6 +37,12 @@
     "WidgetHTML": {
       "type": "json",
       "required": true
+    },
+    "index": {
+      "type": "integer",
+      "min": 1,
+      "required": true,
+      "default": 1
     }
   }
 }
