added fb cred to cms

--- a/api/news-seite/models/news-seite.settings.json
+++ b/api/news-seite/models/news-seite.settings.json
@@ -12,6 +12,14 @@
     "AnzahlNewsProSeite": {
       "type": "integer",
       "required": true
+    },
+    "FacebookToken": {
+      "type": "text",
+      "required": true
+    },
+    "SeitenId": {
+      "type": "text",
+      "required": true
     }
   }
 }
