added 'show maps' to index

--- a/api/index-seite/models/index-seite.settings.json
+++ b/api/index-seite/models/index-seite.settings.json
@@ -11,6 +11,11 @@
   "attributes": {
     "Kontakt": {
       "type": "richtext"
+    },
+    "MapsAnzeigen": {
+      "type": "boolean",
+      "default": true,
+      "required": true
     }
   }
 }
