widgethtml to key, added jahrgang

--- a/api/team/models/team.settings.json
+++ b/api/team/models/team.settings.json
@@ -40,8 +40,11 @@
       "required": true,
       "default": 1
     },
-    "WidgetHTML": {
+    "WidgetKey": {
       "type": "text"
+    },
+    "Jahrgang": {
+      "type": "string"
     }
   }
 }
