--- a/api/team/models/team.settings.json
+++ b/api/team/models/team.settings.json
@@ -41,7 +41,7 @@
       "default": 1
     },
     "WidgetKey": {
-      "type": "text"
+      "type": "string"
     },
     "Jahrgang": {
       "type": "string"
