added history text field

--- a/api/home/models/home.settings.json
+++ b/api/home/models/home.settings.json
@@ -36,6 +36,9 @@
     },
     "Sponsorentext": {
       "type": "richtext"
+    },
+    "Geschichtstext": {
+      "type": "richtext"
     }
   }
 }
